# rgba-simple

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: rust.yml
src/: channel.rs  colorerror.rs  float.rs  gdk_impl.rs  gtk_impl.rs  hex.rs  hexcolor.rs  int.rs  lib.rs  primary.rs  reduced.rs  rgb.rs  rgba.rs
src/channel/: mod.rs
src/hex/: mod.rs
src/primary/: mod.rs
src/rgba/: mod.rs
