[package]
name = "rgba_simple"
version = "0.2.0"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Simple RGBA and Hex color representation"
repository = "https://codeberg.org/jeang3nie/rgba_simple"
keywords = ["graphics", "color", "rgba"]
categories = ["graphics", "multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.hex]
version = "~0.4"
default-features = false
features = ["std"]

[dependencies.serde]
version = "~1.0"
features = ["derive"]

[dependencies.gtk]
version = "~0.3"
package = "gtk4"
optional = true

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
