[package]
name = "rgba_simple"
version = "0.4"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Simple RGBA and Hex color representation"
repository = "https://codeberg.org/jeang3nie/rgba-simple"
keywords = ["graphics", "color", "rgba"]
categories = ["graphics", "multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
version = "~1.0"
features = ["derive"]

[dependencies.gdk]
version = "~0.3"
package = "gdk4"
optional = true

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
