[package]
name = "rgba_simple"
version = "0.8.0"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Simple RGBA and Hex color representation"
repository = "https://codeberg.org/jeang3nie/rgba-simple"
homepage = "https://jeang3nie.codeberg.page"
keywords = ["graphics", "color", "rgba"]
categories = ["graphics", "multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.gdk]
version = "0.5"
package = "gdk4"
optional = true
